# MPL_UPDATER

./: README.md  setup.cfg  setup.py
src/mpl_updater/: __init__.py  main.py  test.py
