[metadata]
# replace with your username:
name = mpl_updater-pkg-OgoBogo
version = 0.0.1
author = OgoBogo
author_email = hugo@doc-tcpip.org
description = A live updating environment for visualisations via Matplotlib.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HugoHF/MPL_UPDATER
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
